[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyintegrity"
version = "0.0.1"
description = "fitness for service for metallic pipes"
readme = "README.md"
authors = [{ name = "Vamsee Achanta", email = "vamsee.achanta@aceengineer.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords=['fitness for service', 'condition based monitoring', 'CBM','api579', 'api510', 'asme b31g', 'bs7910', 'api rp 2rd']
dependencies = ["pyyaml", "openpyxl", "pandas", "numpy", "matplotlib", "plotly", 'tomli; python_version < "3.11"']

requires-python = ">=3.7"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["black", "bumpver", "isort", "mypy", "pytest"]

    [project.scripts]
    ffs_analysis = "pyintegrity.API579"

    [project.urls]
    repository    = "https://github.com/vamseeachanta/pyintegrity"
    documentation = "https://github.com/vamseeachanta/pyintegrity/blob/main/README.md"


[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "src/lmfa/__init__.py" = ["{version}"]
    "src/lmfa/__main__.py" = ["- leveraged-multi-family-analysis v{version}"]

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Reader imports"

[tool.mypy]
strict = true

    [[tool.mypy.overrides]]
    module                 = "feedparser"
    ignore_missing_imports = true
